Revert "spacing fix"
This reverts commit d9ed275ad80ed6a2d78be444860cc85c5db35879.

--- a/style.css
+++ b/style.css
@@ -2107,31 +2107,16 @@ div.thumbnails .magnifier .buttons {
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767px) {
 	.general-title .lead {
-		text-align: center;
+		text-align: justify;
 	}
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
 	.general-title .lead {
-		text-align: center;
+		text-align: justify;
 	}
 }
-
-
-/* .general-title-card {
-  background: transparent;
-  padding: 30px 20px;
-  margin-bottom: 40px;
-  border-radius: 16px;
-  box-shadow: transparent;
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-} */
-
 
 /* Large devices (desktops, 992px and up) */
 
